Convert some Functions/Predicates to streams & lambdas
The conversion is somewhat conservative; there are many places where
we use things like Lists.transform and FluentIterable where we could
in theory switch entirely to streams, but the win is not obvious.
Converting Functions to lambdas is pretty much always a win, though.

Change-Id: I771b13bddb768426c8bb2dbf81207664994ee21d